updated link for michael fields

--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -101,7 +101,7 @@
         </p>
         <hr>
         <p>
-          The <a href="https://www.michaelfields.org/cover-crops" target="_blank" rel="noopener noreferrer">Michael
+          The <a href="https://www.michaelfields.org/covercrops" target="_blank" rel="noopener noreferrer">Michael
             Fields Agricultural Institute's</a> Wisconsin Cover Crop Citizen Science Project is
           a partnership with
           UW-Madison's <a
