--- a/wisccc/templates/wisccc/wisc_cc_scenario.html
+++ b/wisccc/templates/wisccc/wisc_cc_scenario.html
@@ -107,15 +107,18 @@
                         </s>
                         <li>Make pretty modal of field details</li>
                         <ul>
-                            <li>planting rate and <s>intial soil conditions</s></li>
+                            <s>
+                                <li>planting rate and intial soil conditions</li>
+                            </s>
                             <li>manuring info</li>
                             <li>field acreage</li>
                             <s>
                                 <li>tillage</li>
                                 <li>termination</li>
+                                <li>forage quality info</li>
+                                <li>nutrient info</li>
                             </s>
-                            <li>forage quality info</li>
-                            <li>nutrient info</li>
+
                             <s>
                                 <li>growing conditions: gdd and precip</li>
                             </s>
