--- a/wisccc/templates/wisccc/update_column_ancillarydata.html
+++ b/wisccc/templates/wisccc/update_column_ancillarydata.html
@@ -1,3 +1,3 @@
-{% if record.survey_year == 2023 %}
+{% if record.survey_year > 2020 %}
 <a class="btn btn-info btn-sm" href="{% url 'update_labdata' record.id %}">Open</a>
 {% endif %}
