forgot proper name for content variables

--- a/wisccc/templates/wisccc/wisc_cc_scenario.html
+++ b/wisccc/templates/wisccc/wisc_cc_scenario.html
@@ -506,13 +506,13 @@
                     "S %": "percent_s",
 
                     "C to N Ratio": "c_to_n_ratio",
-                    "N lbs/acre": "n_lbs_acre",
-                    "P lbs/acre": "p_lbs_acre",
-                    "C lbs/acre": "c_lbs_acre",
-                    "K lbs/acre": "k_lbs_acre",
-                    "Ca lbs/acre": "ca_lbs_acre",
-                    "Mg lbs/acre": "mg_lbs_acre",
-                    "S lbs/acre": "s_lbs_acre",
+                    "N lbs/acre": "n_content",
+                    "P lbs/acre": "p_content",
+                    "C lbs/acre": "c_content",
+                    "K lbs/acre": "k_content",
+                    "Ca lbs/acre": "ca_content",
+                    "Mg lbs/acre": "mg_content",
+                    "S lbs/acre": "s_content",
 
                     "Height of stand (in)": "height_of_stand"
                 }
