--- a/wisccc/templates/wisccc/wisc_cc_scenario.html
+++ b/wisccc/templates/wisccc/wisc_cc_scenario.html
@@ -86,7 +86,7 @@
     <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="card">
             <div class="card-body">
-
+                <!-- 
                 <div>
                     <p>Todos</p>
                     <ul>
@@ -142,7 +142,7 @@
                         <li>Pretty cards? More description?</li>
 
                     </ul>
-                </div>
+                </div> -->
                 <div class="row">
                     <div class="col-sm-6">
                         <div class="card">
