add "in dev" to alert, rather than card

--- a/wisccc/templates/wisccc/wisc_cc_scenario.html
+++ b/wisccc/templates/wisccc/wisc_cc_scenario.html
@@ -86,22 +86,17 @@
     <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="card">
             <div class="card-body">
+
+
+                <div class="alert alert-warning" role="alert">
+                    This tool is in development.
+                    To share feedback or ask any questions please
+                    email <a href="mailto:mingram@michaelfields.org">Mrill Ingram at
+                        mingram@michaelfields.org</a>
+                </div>
+
                 <div class="row">
                     <div class="col-sm-12">
-
-                        <div class="card border-danger mb-3" style="max-width: 18rem;">
-                            <div class="card-header">In development</div>
-                            <div class="card-body">
-                                <!-- <h5 class="card-title">In development</h5> -->
-                                <p class="card-text">
-                                    This tool is in development.
-                                    To share feedback or ask any questions please
-                                    email <a href="mailto:mingram@michaelfields.org">Mrill Ingram at
-                                        mingram@michaelfields.org</a>
-                                </p>
-                            </div>
-                        </div>
-
                         <div class="card">
                             <div class="card-body">
                                 <h3 class="card-title">On-farm cover crop data by farmers, for farmers</h3>
